--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <h2>静岡には何が有名でしょうか？</h2>
 <caption>
 <strong>なにがあるか当ててみよう</strong>
-<details
+<details>
 <summary>いくつあてはまったかな？</summary>
 <p>お茶、干物、ミカン、サッカーなどがあります！</p>
 </details>
